Fixing poster overlap

--- a/css/app.css
+++ b/css/app.css
@@ -1,5 +1,6 @@
 #poster{
   max-height: unset;
+  margin-top: 70px;
 }
 #onpage {
   text-decoration: underline white 3px;
@@ -189,6 +190,9 @@ h2 {
 }
 
 @media screen and (min-width: 640px) {
+  #poster{
+    margin-top: unset;
+}
   h1 {
     font-size: 28px;
   }
